modif basicOperation class and some make dinamix premis but spliterators error and i will fixing it